--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,4 +1,15 @@
-body{
-    background-color: aliceblue;
-    color: grey;
-}
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
